fixes center align for drop down of add button

--- a/designers-toolkit-react/client/main.css
+++ b/designers-toolkit-react/client/main.css
@@ -342,13 +342,12 @@ img.logoImg {
 .dropDownMenu {
   margin-top:5px;
   background-color: #ffffff ;
-  display:inline-block;
   box-shadow: 5px 10px 18px #888888;
   border-radius:5px;
   padding:5px;
   border-style:solid;
   border-color:black;
-  position:absolute;
+  position:relative;
   z-index: 100;
 
   -webkit-animation: fadein 0.4s; /* Safari, Chrome and Opera > 12.1 */
